--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,138 +3,290 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".HomeFragment">
+        android:layout_height="match_parent">
 
-
-        <LinearLayout
-            android:id="@+id/LLheader"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="170dp"
-            android:background="@drawable/background_header_with_sparkle"
-            android:orientation="vertical"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
-                android:fontFamily="@font/nunito_sans_extra_bold"
-                android:letterSpacing="0.25"
-                android:text="TENDO"
-                android:textColor="@color/white"
-                android:textSize="22sp"
-                android:textStyle="bold" />
-
+            android:layout_height="wrap_content"
+            tools:context=".HomeFragment">
 
             <LinearLayout
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
-                android:weightSum="3"
-                android:layout_gravity="end"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="20dp">
+                android:id="@+id/LLheader"
+                android:layout_width="match_parent"
+                android:layout_height="170dp"
+                android:background="@drawable/background_header_with_sparkle"
+                android:orientation="vertical"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-                <FrameLayout
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:layout_weight="1">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="20dp"
+                    android:fontFamily="@font/nunito_sans_extra_bold"
+                    android:letterSpacing="0.25"
+                    android:text="TENDO"
+                    android:textColor="@color/white"
+                    android:textSize="22sp"
+                    android:textStyle="bold" />
+
+
+                <LinearLayout
+                    android:layout_width="120dp"
+                    android:layout_height="wrap_content"
+                    android:weightSum="3"
+                    android:layout_gravity="end"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginBottom="20dp">
+
+                    <FrameLayout
+                        android:layout_width="26dp"
+                        android:layout_height="26dp"
+                        android:layout_weight="1">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center"
+                            android:src="@drawable/ic_heart_white" />
+
+
+                    </FrameLayout>
+
+
+                    <FrameLayout
+                        android:layout_width="26dp"
+                        android:layout_height="26dp"
+                        android:layout_weight="1">
+
+                        <ImageView
+                            android:id="@+id/notifi"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center"
+                            android:src="@drawable/ic_notification_white" />
+
+                        <TextView
+                            android:id="@+id/tvNotificationCount"
+                            android:layout_width="15dp"
+                            android:layout_height="15dp"
+                            android:layout_marginEnd="6dp"
+                            android:background="@drawable/circle_bg"
+                            android:layout_gravity="end"
+                            android:gravity="center"
+                            android:maxLength="4"
+                            android:text="5"
+                            android:textColor="@color/white"
+                            android:textSize="10sp" />
+
+
+                    </FrameLayout>
+
+                    <FrameLayout
+                        android:layout_width="26dp"
+                        android:layout_height="26dp"
+                        android:layout_weight="1">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center"
+                            android:src="@drawable/ic_shopping_cart" />
+
+                        <TextView
+                            android:id="@+id/tvShoppingCartCount"
+                            android:layout_width="15dp"
+                            android:layout_height="15dp"
+                            android:layout_marginEnd="2dp"
+                            android:background="@drawable/circle_bg"
+                            android:layout_gravity="end"
+                            android:gravity="center"
+                            android:maxLength="4"
+                            android:text="8"
+                            android:textColor="@color/white"
+                            android:textSize="10sp" />
+
+                    </FrameLayout>
+
+
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:id="@+id/LLSearchView"
+                    android:layout_width="350dp"
+                    android:layout_height="48dp"
+                    android:layout_gravity="center_horizontal"
+                    android:orientation="horizontal"
+                    android:background="@drawable/searchview_custom_shape">
                     <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center"
-                        android:src="@drawable/ic_heart_white" />
-
-
-                </FrameLayout>
-
-
-                <FrameLayout
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:layout_weight="1">
-
-                    <ImageView
-                        android:id="@+id/notifi"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center"
-                        android:src="@drawable/ic_notification_white" />
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginStart="25dp"
+                        android:src="@drawable/ic_search_icon_blue"/>
 
                     <TextView
-                        android:id="@+id/tvNotificationCount"
-                        android:layout_width="16dp"
-                        android:layout_height="16dp"
-                        android:layout_marginEnd="6dp"
-                        android:background="@drawable/circle_bg"
-                        android:layout_gravity="end"
-                        android:gravity="center"
-                        android:maxLength="4"
-                        android:text="5"
-                        android:textColor="@color/white"
-                        android:textSize="10sp" />
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Search.."
+                        android:textSize="18sp"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginStart="16dp"/>
+                </LinearLayout>
 
-
-                </FrameLayout>
-
-                <FrameLayout
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:layout_weight="1">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center"
-                        android:src="@drawable/ic_shopping_cart" />
-
-                    <TextView
-                        android:id="@+id/tvShoppingCartCount"
-                        android:layout_width="16dp"
-                        android:layout_height="16dp"
-                        android:layout_marginEnd="2dp"
-                        android:background="@drawable/circle_bg"
-                        android:layout_gravity="end"
-                        android:gravity="center"
-                        android:maxLength="4"
-                        android:text="8"
-                        android:textColor="@color/white"
-                        android:textSize="10sp" />
-
-                </FrameLayout>
 
 
             </LinearLayout>
 
 
-            <androidx.appcompat.widget.SearchView
-                android:layout_width="350dp"
+            <ViewFlipper
+                android:id="@+id/viewFlipper"
+                android:layout_width="300dp"
+                android:layout_height="140dp"
+                android:layout_marginTop="25dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/LLheader" />
+
+            <LinearLayout
+                android:id="@+id/LLviewFlipperIndicator"
+                android:layout_width="50dp"
+                android:layout_height="20dp"
+                android:background="@color/black"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="@+id/viewFlipper"
+                app:layout_constraintStart_toStartOf="@+id/viewFlipper"
+                app:layout_constraintTop_toBottomOf="@id/viewFlipper" />
+
+            <TextView
+                android:id="@+id/tvTopCategories"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                app:iconifiedByDefault="false"
-                app:queryHint="Search.."
-                android:background="@drawable/searchview_custom_shape" />
+                android:layout_marginTop="50dp"
+                android:fontFamily="@font/nunito_sans_extra_bold"
+                android:text="Top Categories"
+                android:textColor="@color/deep_blue"
+                android:textSize="18sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.14"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/LLviewFlipperIndicator" />
+
+            <Button
+                android:id="@+id/btnViewMore"
+                android:layout_width="120dp"
+                android:layout_height="37dp"
+                android:background="#0A09427D"
+                android:layout_marginTop="43dp"
+                android:layout_marginStart="20dp"
+                android:text="View more"
+                app:layout_constraintVertical_bias="1"
+                android:textColor="@color/deep_blue"
+                android:textSize="12sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.7"
+                app:layout_constraintStart_toEndOf="@+id/tvTopCategories"
+                app:layout_constraintTop_toBottomOf="@+id/LLviewFlipperIndicator" />
+
+            <LinearLayout
+                android:id="@+id/linearLayout2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:orientation="vertical"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.4"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvTopCategories">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingStart="10dp"
+                    android:paddingEnd="8dp">
+
+                    <Button
+                        android:layout_width="165dp"
+                        android:layout_height="wrap_content"
+                        android:textSize="12sp"
+                        android:background="@drawable/ic_outlinedboxbutton"
+                        android:drawableLeft="@drawable/ic_tech"
+                        android:text="Technology"
+                        android:textColor="@color/black"
+                        android:layout_marginEnd="10dp"/>
+
+                    <Button
+                        android:layout_width="165dp"
+                        android:layout_height="wrap_content"
+                        android:textSize="12sp"
+                        android:background="@drawable/ic_outlinedboxbutton"
+                        android:drawableLeft="@drawable/ic_acess"
+                        android:text="Accesories"
+                        android:textColor="@color/black" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="10dp"
+                    android:paddingStart="10dp"
+                    android:paddingEnd="8dp">
+
+                    <Button
+                        android:layout_width="165dp"
+                        android:layout_height="wrap_content"
+                        android:textSize="12sp"
+                        android:background="@drawable/ic_outlinedboxbutton"
+                        android:drawableLeft="@drawable/ic_agri"
+                        android:text="Agriculture"
+                        android:layout_marginEnd="10dp"
+                        android:textColor="@color/black" />
+
+                    <Button
+                        android:layout_width="165dp"
+                        android:layout_height="wrap_content"
+                        android:textSize="12sp"
+                        android:background="@drawable/ic_outlinedboxbutton"
+                        android:drawableLeft="@drawable/ic_pharmacy"
+                        android:text="Pharmacy"
+                        android:textColor="@color/black" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/tvAllProducts"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:fontFamily="@font/nunito_sans_extra_bold"
+                android:text="All products"
+                android:textColor="@color/deep_blue"
+                android:textSize="18sp"
+                app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
+                app:layout_constraintHorizontal_bias="0"
+                app:layout_constraintStart_toStartOf="@+id/tvTopCategories"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/tvAllProducts" />
 
 
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-        <ViewFlipper
-            android:id="@+id/viewFlipper"
-            android:layout_width="300dp"
-            android:layout_height="140dp"
-            android:layout_marginTop="25dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/LLheader" />
+    </ScrollView>
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
