--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -1,17 +1,272 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AccountFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".ui.main.view.fragments.AccountFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Account"
-        android:textStyle="bold"
-        android:textSize="42sp"
-        android:gravity="center"/>
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
-</FrameLayout>
+        <TextView
+            android:id="@+id/tv_account"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Account"
+            android:textSize="20sp"
+            android:textColor="@color/black"
+            android:fontFamily="@font/nunito_sans_bold"
+            android:gravity="center_horizontal"
+            android:layout_marginStart="90dp"
+            android:layout_marginTop="10dp"/>
+
+    </androidx.appcompat.widget.Toolbar>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginTop="30dp"
+        android:layout_below="@id/toolbar">
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="25dp">
+
+            <ImageView
+                android:id="@+id/i1"
+                android:layout_width="24dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_profile"/>
+
+
+            <TextView
+                android:id="@+id/t1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Profile"
+                android:layout_toRightOf="@id/i1"
+                android:textSize="14sp"
+                android:fontFamily="@font/poppins_bold"
+                android:textColor="#223263"
+                android:letterSpacing="0.02"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="12dp"/>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="25dp">
+
+            <ImageView
+                android:id="@+id/i2"
+                android:layout_width="24dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_orders"/>
+
+
+            <TextView
+                android:id="@+id/t2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="My earnings"
+                android:layout_toRightOf="@id/i2"
+                android:textSize="14sp"
+                android:fontFamily="@font/poppins_bold"
+                android:textColor="#223263"
+                android:letterSpacing="0.02"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="12dp"/>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="25dp">
+
+            <ImageView
+                android:id="@+id/i3"
+                android:layout_width="24dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_orders"/>
+
+
+            <TextView
+                android:id="@+id/t3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="My orders"
+                android:layout_toRightOf="@id/i3"
+                android:textSize="14sp"
+                android:fontFamily="@font/poppins_bold"
+                android:textColor="#223263"
+                android:letterSpacing="0.02"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="12dp"/>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="25dp">
+
+            <ImageView
+                android:id="@+id/i4"
+                android:layout_width="24dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_delivery"/>
+
+
+            <TextView
+                android:id="@+id/t4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Delivery prices"
+                android:layout_toRightOf="@id/i4"
+                android:textSize="14sp"
+                android:fontFamily="@font/poppins_bold"
+                android:textColor="#223263"
+                android:letterSpacing="0.02"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="12dp"/>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="25dp">
+
+            <ImageView
+                android:id="@+id/i5"
+                android:layout_width="24dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_help"/>
+
+
+            <TextView
+                android:id="@+id/t5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Notifications"
+                android:layout_toRightOf="@id/i5"
+                android:textSize="14sp"
+                android:fontFamily="@font/poppins_bold"
+                android:textColor="#223263"
+                android:letterSpacing="0.02"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="12dp"/>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="25dp">
+
+            <ImageView
+                android:id="@+id/i6"
+                android:layout_width="24dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_help"/>
+
+
+            <TextView
+                android:id="@+id/t6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Settings"
+                android:layout_toRightOf="@id/i6"
+                android:textSize="14sp"
+                android:fontFamily="@font/poppins_bold"
+                android:textColor="#223263"
+                android:letterSpacing="0.02"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="12dp"/>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="25dp">
+
+            <ImageView
+                android:id="@+id/i7"
+                android:layout_width="24dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_help"/>
+
+
+            <TextView
+                android:id="@+id/t7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Help"
+                android:layout_toRightOf="@id/i7"
+                android:textSize="14sp"
+                android:fontFamily="@font/poppins_bold"
+                android:textColor="#223263"
+                android:letterSpacing="0.02"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="12dp"/>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="25dp">
+
+            <ImageView
+                android:id="@+id/i8"
+                android:layout_width="24dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_help"/>
+
+
+            <TextView
+                android:id="@+id/t8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="About"
+                android:layout_toRightOf="@id/i8"
+                android:textSize="14sp"
+                android:fontFamily="@font/poppins_bold"
+                android:textColor="#223263"
+                android:letterSpacing="0.02"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="12dp"/>
+
+        </RelativeLayout>
+
+    </LinearLayout>
+</RelativeLayout>
