--- a/app/src/main/res/layout/fragment_account_activation.xml
+++ b/app/src/main/res/layout/fragment_account_activation.xml
@@ -16,7 +16,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:context=".AccountActivationFragment">
+            tools:context=".ui.main.view.fragments.AccountActivationFragment">
 
             <LinearLayout
                 android:layout_width="wrap_content"
