--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,7 +10,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:context=".HomeFragment">
+            tools:context=".ui.main.view.fragments.HomeFragment">
 
             <LinearLayout
                 android:id="@+id/LLheader"
@@ -51,7 +51,7 @@
 
                         <ImageView
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
+                            android:layout_height="22dp"
                             android:layout_gravity="center"
                             android:src="@drawable/ic_heart_white" />
 
@@ -67,7 +67,7 @@
                         <ImageView
                             android:id="@+id/notifi"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
+                            android:layout_height="22dp"
                             android:layout_gravity="center"
                             android:src="@drawable/ic_notification_white" />
 
@@ -94,7 +94,7 @@
 
                         <ImageView
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
+                            android:layout_height="22dp"
                             android:layout_gravity="center"
                             android:src="@drawable/ic_shopping_cart" />
 
@@ -180,15 +180,18 @@
 
             <Button
                 android:id="@+id/btnViewMore"
-                android:layout_width="120dp"
-                android:layout_height="37dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:background="#0A09427D"
                 android:layout_marginTop="43dp"
                 android:layout_marginStart="20dp"
-                android:text="View more"
+                android:text="@string/view_more"
                 app:layout_constraintVertical_bias="1"
                 android:textColor="@color/deep_blue"
                 android:textSize="12sp"
+                android:fontFamily="@font/poppins_medium"
+                android:padding="0dp"
+                android:minHeight="0dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.7"
                 app:layout_constraintStart_toEndOf="@+id/tvTopCategories"
@@ -196,71 +199,22 @@
 
             <LinearLayout
                 android:id="@+id/linearLayout2"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
+                android:layout_margin="18dp"
                 android:orientation="vertical"
-                android:paddingStart="10dp"
-                android:paddingEnd="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.4"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tvTopCategories">
 
-                <LinearLayout
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerviewCategories"
                     android:layout_width="match_parent"
+                    android:clipToPadding="true"
+                    android:nestedScrollingEnabled="false"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:paddingStart="10dp"
-                    android:paddingEnd="8dp">
+                    />
 
-                    <Button
-                        android:layout_width="165dp"
-                        android:layout_height="wrap_content"
-                        android:textSize="12sp"
-                        android:background="@drawable/ic_outlinedboxbutton"
-                        android:drawableLeft="@drawable/ic_tech"
-                        android:text="Technology"
-                        android:textColor="@color/black"
-                        android:layout_marginEnd="10dp"/>
-
-                    <Button
-                        android:layout_width="165dp"
-                        android:layout_height="wrap_content"
-                        android:textSize="12sp"
-                        android:background="@drawable/ic_outlinedboxbutton"
-                        android:drawableLeft="@drawable/ic_acess"
-                        android:text="Accesories"
-                        android:textColor="@color/black"/>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="10dp"
-                    android:paddingStart="10dp"
-                    android:paddingEnd="8dp">
-
-                    <Button
-                        android:layout_width="165dp"
-                        android:layout_height="wrap_content"
-                        android:textSize="12sp"
-                        android:background="@drawable/ic_outlinedboxbutton"
-                        android:drawableLeft="@drawable/ic_agri"
-                        android:text="Agriculture"
-                        android:layout_marginEnd="10dp"
-                        android:textColor="@color/black" />
-
-                    <Button
-                        android:layout_width="165dp"
-                        android:layout_height="wrap_content"
-                        android:textSize="12sp"
-                        android:background="@drawable/ic_outlinedboxbutton"
-                        android:drawableLeft="@drawable/ic_pharmacy"
-                        android:text="Pharmacy"
-                        android:textColor="@color/black" />
-                </LinearLayout>
             </LinearLayout>
 
             <TextView
@@ -278,7 +232,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerview"
+                android:id="@+id/recyclerviewProducts"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:layout_constraintBottom_toBottomOf="parent"
