--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -24,7 +24,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:context=".SignUpFragment">
+                tools:context=".ui.main.view.fragments.SignUpFragment">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
