--- a/app/src/main/res/layout/fragment_splash_screen.xml
+++ b/app/src/main/res/layout/fragment_splash_screen.xml
@@ -5,7 +5,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".SplashScreenFragment"
+        tools:context=".ui.main.view.fragments.SplashScreenFragment"
         android:background="@color/deep_blue">
 
 
