--- a/app/src/main/res/layout/fragment_view_pager.xml
+++ b/app/src/main/res/layout/fragment_view_pager.xml
@@ -6,7 +6,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".onboarding.ViewPagerFragment"
+        tools:context=".ui.main.view.fragments.ViewPagerFragment"
         android:background="@color/deep_blue">
 
         <Button
