--- a/app/src/main/res/layout/recyclerview_layout.xml
+++ b/app/src/main/res/layout/recyclerview_layout.xml
@@ -20,7 +20,7 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/imageview"
+                android:id="@+id/image"
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
                 android:scaleType="fitXY"
@@ -31,7 +31,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/text_value"
+                    android:id="@+id/value"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="White Cotton Shirt"
@@ -41,7 +41,7 @@
                     android:layout_marginLeft="25dp"/>
 
                 <TextView
-                    android:id="@+id/text_price"
+                    android:id="@+id/price"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
