--- a/app/src/main/res/navigation/main_activity_nav.xml
+++ b/app/src/main/res/navigation/main_activity_nav.xml
@@ -6,7 +6,7 @@
     app:startDestination="@id/homeFragment">
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.example.tendoapp.HomeFragment"
+        android:name="com.example.tendoapp.ui.main.view.fragments.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" >
         <action
@@ -18,26 +18,26 @@
         app:destination="@id/searchFragment" />
     <fragment
         android:id="@+id/sharesFragment"
-        android:name="com.example.tendoapp.SharesFragment"
+        android:name="com.example.tendoapp.ui.main.view.fragments.SharesFragment"
         android:label="fragment_shares"
         tools:layout="@layout/fragment_shares" />
     <fragment
         android:id="@+id/exploreFragment"
-        android:name="com.example.tendoapp.ExploreFragment"
+        android:name="com.example.tendoapp.ui.main.view.fragments.ExploreFragment"
         android:label="fragment_explore"
         tools:layout="@layout/fragment_explore" />
     <fragment
         android:id="@+id/categoriesFragment"
-        android:name="com.example.tendoapp.CategoriesFragment"
+        android:name="com.example.tendoapp.ui.main.view.fragments.CategoriesFragment"
         android:label="fragment_categories"
         tools:layout="@layout/fragment_categories" />
     <fragment
         android:id="@+id/accountFragment"
-        android:name="com.example.tendoapp.AccountFragment"
+        android:name="com.example.tendoapp.ui.main.view.fragments.AccountFragment"
         android:label="fragment_account"
         tools:layout="@layout/fragment_account" />
     <fragment
         android:id="@+id/searchFragment"
-        android:name="com.example.tendoapp.SearchFragment"
+        android:name="com.example.tendoapp.ui.main.view.fragments.SearchFragment"
         android:label="SearchFragment" />
 </navigation>
