--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/splashScreenFragment"
-        android:name="com.example.tendoapp.SplashScreenFragment"
+        android:name="com.example.tendoapp.ui.main.view.fragments.SplashScreenFragment"
         android:label="fragment_splash_screen"
         tools:layout="@layout/fragment_splash_screen" >
         <action
@@ -23,7 +23,7 @@
     </fragment>
     <fragment
         android:id="@+id/signUpFragment"
-        android:name="com.example.tendoapp.SignUpFragment"
+        android:name="com.example.tendoapp.ui.main.view.fragments.SignUpFragment"
         android:label="SignUpFragment" >
         <action
             android:id="@+id/action_signUpFragment_to_accountActivationFragment"
@@ -33,7 +33,7 @@
     </fragment>
     <fragment
         android:id="@+id/viewPagerFragment"
-        android:name="com.example.tendoapp.onboarding.ViewPagerFragment"
+        android:name="com.example.tendoapp.ui.main.view.fragments.ViewPagerFragment"
         android:label="ViewPagerFragment" >
         <action
             android:id="@+id/action_viewPagerFragment_to_signUpFragment"
@@ -43,7 +43,7 @@
     </fragment>
     <fragment
         android:id="@+id/accountActivationFragment"
-        android:name="com.example.tendoapp.AccountActivationFragment"
+        android:name="com.example.tendoapp.ui.main.view.fragments.AccountActivationFragment"
         android:label="AccountActivationFragment" >
         <action
             android:id="@+id/action_accountActivationFragment_to_mainActivity2"
@@ -53,6 +53,6 @@
     </fragment>
     <activity
         android:id="@+id/mainActivity2"
-        android:name="com.example.tendoapp.MainActivity2"
+        android:name="com.example.tendoapp.ui.main.view.activities.MainActivity2"
         android:label="MainActivity2" />
 </navigation>
