--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,6 +19,8 @@
     <color name="background_button">#1099EE</color>
     <color name="text_create_account">#9098B1</color>
     <color name="background">#FFFFFF</color>
+    <color name="ic_launcher_background">#004B87</color>
+
 
     <color name="color_icons">#9098B1</color>
 
