--- a/app/src/main/res/drawable/view_scroller_bottom_sheet.xml
+++ b/app/src/main/res/drawable/view_scroller_bottom_sheet.xml
@@ -3,8 +3,8 @@
     android:color="@color/white">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/background_button"/>
-            <corners android:radius="5dp"/>
+            <solid android:color="#E1E2E3"/>
+            <corners android:radius="20dp"/>
         </shape>
     </item>
 
