--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -3,9 +3,31 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <ScrollView
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        tools:context=".ui.main.view.activities.ProductActivity">
+
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/app_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="0dp"
+        android:fitsSystemWindows="true"
+        app:elevation="0dp">
+
+
+            <include layout="@layout/toolbar_main_home" />
+
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:layout_height="wrap_content">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -13,113 +35,12 @@
             android:orientation="vertical"
             tools:context=".ui.main.view.activities.ProductActivity">
 
-            <com.google.android.material.appbar.AppBarLayout
-                android:id="@+id/appBarLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                android:backgroundTint="@color/white"
-                android:elevation="8dp"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:weightSum="2">
-
-                    <TextView
-                        android:layout_weight="2"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginTop="10dp"
-                        android:fontFamily="@font/nunito_sans_extra_bold"
-                        android:letterSpacing="0.25"
-                        android:text="TENDO"
-                        android:textColor="@color/deep_blue"
-                        android:textSize="22sp"
-                        android:textStyle="bold" />
-
-                    <LinearLayout
-                        android:layout_width="90dp"
-                        android:layout_height="30dp"
-                        android:weightSum="2"
-                        android:layout_marginEnd="20dp"
-                        android:layout_gravity="bottom">
-
-                        <FrameLayout
-                            android:layout_width="26dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1">
-
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_gravity="center"
-                                android:src="@drawable/ic_heart_blue" />
-
-
-                        </FrameLayout>
-
-                        <FrameLayout
-                            android:layout_width="26dp"
-                            android:layout_height="26dp"
-                            android:layout_weight="1"
-                            android:layout_gravity="center_horizontal|center_vertical">
-
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="22dp"
-                                android:layout_gravity="center|center_vertical|center_horizontal"
-                                android:src="@drawable/ic_cart_blue" />
-
-                            <TextView
-                                android:id="@+id/tvShoppingCartCount"
-                                android:layout_width="15dp"
-                                android:layout_height="15dp"
-                                android:layout_marginEnd="2dp"
-                                android:background="@drawable/circle_bg"
-                                android:layout_gravity="end"
-                                android:gravity="center"
-                                android:maxLength="4"
-                                android:text="8"
-                                android:textColor="@color/white"
-                                android:textSize="10sp" />
-
-                        </FrameLayout>
-
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-
-
-                <androidx.appcompat.widget.Toolbar
-                    android:id="@+id/toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_baseline_arrow_back_24"/>
-
-                </androidx.appcompat.widget.Toolbar>
-            </com.google.android.material.appbar.AppBarLayout>
-
-
 
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/viewPagerShowProducts"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
-                app:layout_constraintTop_toBottomOf="@id/appBarLayout"/>
+                app:layout_constraintTop_toTopOf="parent"/>
 
             <LinearLayout
                 android:id="@+id/LLViewPagerIndicator"
@@ -163,14 +84,17 @@
 
             <TextView
                 android:id="@+id/icubn"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="24dp"
+                android:layout_marginLeft="24dp"
                 android:layout_marginTop="15dp"
                 android:fontFamily="@font/nunito_sans_bold"
                 app:layout_constraintHorizontal_bias="0"
-                android:text="Oversized Denim Jacket"
+                android:text="Oversized Denim T-shirt"
                 android:textColor="@color/deep_blue"
-                android:textSize="25sp"
+                android:textSize="18dp"
+                android:drawableRight="@drawable/ic_star_rate"
                 app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
                 app:layout_constraintStart_toStartOf="@+id/LLViewPagerIndicator"
                 app:layout_constraintTop_toBottomOf="@id/LLViewPagerIndicator" />
@@ -198,7 +122,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_gravity="center"
-                        android:background="@drawable/ic_addition"/>
+                        android:foreground="?attr/selectableItemBackgroundBorderless"
+                        android:background="@drawable/baseline_add_circle_primary_24dp"/>
 
                 </FrameLayout>
 
@@ -206,12 +131,13 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="01"
-                    android:textColor="#B17248"
-                    android:textStyle="bold"
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="10dp"
-                    android:textSize="25sp"/>
+                    android:fontFamily="@font/raleway_semibold"
+                    android:text="01"
+                    android:textColor="#B17248"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
                 <FrameLayout
                     android:layout_width="28dp"
                     android:layout_height="28dp"
@@ -222,18 +148,20 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_gravity="center"
-                        android:background="@drawable/ic_subtraction"/>
+                        android:foreground="?attr/selectableItemBackgroundBorderless"
+                        android:background="@drawable/baseline_remove_circle_primary_24dp"/>
 
                 </FrameLayout>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="₵67.90"
                     android:layout_marginStart="145dp"
-                    android:textSize="25sp"
-                    android:textStyle="bold"
-                    android:textColor="#B17248"/>
+                    android:fontFamily="@font/roboto_regular"
+                    android:text="₵67.90"
+                    android:textColor="#B17248"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
@@ -241,25 +169,26 @@
                 android:id="@+id/tvTotal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Total :"
-                app:layout_constraintEnd_toEndOf="@+id/layout_4"
-                app:layout_constraintStart_toStartOf="@+id/layout_4"
-                app:layout_constraintTop_toBottomOf="@+id/layout_4"
-                android:textSize="20sp"
-                android:layout_marginTop="20dp"
-                app:layout_constraintHorizontal_bias="0"
                 android:layout_marginStart="20dp"
-                android:fontFamily="@font/nunito_sans_regular"/>
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/poppins_regular"
+                android:text="Total :"
+                android:textSize="18sp"
+                app:layout_constraintEnd_toEndOf="@+id/layout_4"
+                app:layout_constraintHorizontal_bias="0"
+                app:layout_constraintStart_toStartOf="@+id/layout_4"
+                app:layout_constraintTop_toBottomOf="@+id/layout_4" />
 
             <TextView
                 android:id="@+id/tvTotalPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/raleway_semibold"
                 android:text="₵67.90"
-                android:textSize="34sp"
                 android:textColor="@color/deep_blue"
-                app:layout_constraintHorizontal_bias="0"
+                android:textSize="34sp"
                 app:layout_constraintEnd_toEndOf="@+id/tvTotal"
+                app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintStart_toStartOf="@id/tvTotal"
                 app:layout_constraintTop_toBottomOf="@id/tvTotal" />
 
@@ -267,7 +196,7 @@
             <com.google.android.material.tabs.TabLayout
                 android:id="@+id/tab_layout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginTop="20dp"
                 app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintBottom_toTopOf="@id/viewpager"
@@ -277,8 +206,8 @@
 
             <androidx.viewpager.widget.ViewPager
                 android:id="@+id/viewpager"
-                android:layout_width="wrap_content"
-                android:layout_height="250dp"
+                android:layout_width="match_parent"
+                android:layout_height="600dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tab_layout"
@@ -287,7 +216,54 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:padding="12dp"
+            android:background="@color/primary"
+            android:weightSum="2"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@id/recyclerviewsimilarproducts">
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_share_product"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="6dp"
+                android:layout_weight="1"
+                android:background="@drawable/border_btn_accent"
+                android:drawableLeft="@drawable/ic_share_blue_dark"
+                android:elevation="0dp"
+                android:fontFamily="@font/poppins_bold"
+                android:paddingLeft="12dp"
+                android:paddingRight="12dp"
+                android:shadowColor="@color/primary"
+                android:text="@string/share_product"
+                android:textColor="#1099EE"
+                android:textSize="12sp" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:textColor="@color/white"
+                android:layout_margin="6dp"
+                android:textSize="12sp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/button_background_shape"
+                android:drawableLeft="@drawable/ic_shopping_cart"
+                android:fontFamily="@font/poppins_bold"
+                android:paddingRight="12dp"
+                android:paddingLeft="12dp"
+                android:text="Add to cart" />
+
+        </LinearLayout>
+
+        <include layout="@layout/layout_share_item_bottom_sheet" />
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
 
