--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,7 +9,6 @@
         android:fitsSystemWindows="true"
         tools:context=".ui.main.view.fragments.HomeFragment">
 
-
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/app_bar"
             android:layout_width="match_parent"
@@ -23,11 +22,11 @@
                 style="@style/Widget.MaterialComponents.Toolbar.Primary"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:background="@drawable/background_header_with_sparkle"
                 android:fitsSystemWindows="true"
                 app:contentScrim="?attr/colorPrimary"
                 app:expandedTitleGravity="top"
-                android:layout_gravity="center"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                 app:toolbarId="@+id/toolbar">
 
@@ -41,7 +40,7 @@
                     android:layout_marginRight="24dp"
                     android:background="@drawable/searchview_custom_shape"
                     android:orientation="horizontal"
-                    app:layout_collapseMode="pin">
+                    app:layout_collapseMode="parallax">
 
                     <ImageView
                         android:layout_width="wrap_content"
@@ -59,33 +58,7 @@
                         android:textSize="18sp" />
                 </LinearLayout>
 
-                <androidx.appcompat.widget.Toolbar
-                    android:id="@+id/topAppBar"
-                    style="@style/Widget.MaterialComponents.Toolbar.Primary"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:elevation="0dp"
-                    app:layout_collapseMode="pin"
-                    app:menu="@menu/top_app_bar"
-                    app:popupTheme="@style/AppTheme.PopupOverlay">
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:layout_width="100dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="4dp"
-                            android:contentDescription="@string/logo"
-                            android:scaleType="fitEnd"
-                            android:src="@drawable/tendo" />
-                    </LinearLayout>
-
-
-                </androidx.appcompat.widget.Toolbar>
-
+                <include layout="@layout/toolbar_main_home" />
 
 
             </com.google.android.material.appbar.CollapsingToolbarLayout>
@@ -134,13 +107,14 @@
                         android:id="@+id/tvTopCategories"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="50dp"
+                        android:layout_marginStart="24dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginBottom="32dp"
                         android:fontFamily="@font/nunito_sans_extra_bold"
                         android:text="Top Categories"
                         android:textColor="@color/deep_blue"
                         android:textSize="18sp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.14"
+                        app:layout_constraintBottom_toTopOf="@id/linearLayout2"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/LLViewPagerIndicator" />
 
@@ -148,26 +122,24 @@
                         android:id="@+id/btnViewMore"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginTop="43dp"
+                        android:layout_marginTop="12dp"
+                        android:layout_marginEnd="24dp"
                         android:background="#0A09427D"
                         android:fontFamily="@font/poppins_medium"
                         android:minHeight="0dp"
-                        android:padding="0dp"
                         android:text="@string/view_more"
                         android:textColor="@color/deep_blue"
                         android:textSize="12sp"
+                        app:layout_constraintBottom_toBottomOf="@+id/tvTopCategories"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.7"
-                        app:layout_constraintStart_toEndOf="@+id/tvTopCategories"
-                        app:layout_constraintTop_toBottomOf="@+id/LLViewPagerIndicator"
+                        app:layout_constraintTop_toTopOf="@+id/tvTopCategories"
                         app:layout_constraintVertical_bias="1" />
 
                     <LinearLayout
                         android:id="@+id/linearLayout2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="18dp"
+                        android:layout_marginTop="24dp"
                         android:orientation="vertical"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -186,7 +158,8 @@
                         android:id="@+id/tvAllProducts"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="30dp"
+                        android:layout_marginTop="@dimen/font_size_24"
+                        android:paddingBottom="@dimen/font_size_24"
                         android:fontFamily="@font/nunito_sans_extra_bold"
                         android:text="All products"
                         android:textColor="@color/deep_blue"
