--- a/app/src/main/res/layout/fragment_info_tab.xml
+++ b/app/src/main/res/layout/fragment_info_tab.xml
@@ -5,7 +5,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="12dp"
+        android:paddingTop="24dp"
         android:orientation="vertical"
         tools:context=".ui.main.view.fragments.InfoTabFragment">
 
@@ -23,8 +23,35 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:paddingLeft="20dp"
+            android:padding="24dp"
             android:textSize="14sp"
+            android:fontFamily="@font/nunito_sans_regular"
+            android:text="@string/description_string"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:layout_marginBottom="18dp"
+            android:background="#F6F6F6" />
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:fontFamily="@font/nunito_sans_extra_bold"
+            android:letterSpacing="0.4"
+            android:text="DELIVERY &amp; RETURN DETAILS"
+            android:textColor="@color/deep_blue"
+            android:textSize="14sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:padding="24dp"
+            android:textSize="14sp"
+            android:fontFamily="@font/nunito_sans_regular"
             android:text="@string/description_string"/>
 
     </LinearLayout>
