--- a/app/src/main/res/layout/item_category_main.xml
+++ b/app/src/main/res/layout/item_category_main.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/linearLayout"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="12sp"
+        android:padding="12sp"
+        android:background="?attr/selectableItemBackgroundBorderless"
         app:layout_constraintRight_toRightOf="parent"
         android:orientation="vertical">
         <LinearLayout
@@ -28,19 +28,16 @@
         </LinearLayout>
 
 
-        <TextView
-            android:id="@+id/tv_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:fontFamily="@font/poppins_regular"
-            android:gravity="center"
-            android:paddingTop="8dp"
-            android:text="manshirt"
-            android:textColor="@color/text_create_account"
-            android:textSize="12sp" />
+    <TextView
+        android:id="@+id/tv_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:fontFamily="@font/poppins_regular"
+        android:gravity="center"
+        android:paddingTop="8dp"
+        android:text="manshirt"
+        android:textSize="12sp" />
 
 
     </LinearLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
