--- a/app/src/main/res/layout/item_category_type.xml
+++ b/app/src/main/res/layout/item_category_type.xml
@@ -5,12 +5,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginTop="12sp"
+        android:clickable="true"
+        android:background="?attr/selectableItemBackgroundBorderless"
         app:layout_constraintRight_toRightOf="parent"
         android:orientation="vertical">
         <LinearLayout
