--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -10,7 +10,6 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         tools:context=".ui.main.view.fragments.AccountFragment">
 
 
@@ -22,7 +21,7 @@
 
             <RelativeLayout
                 android:id="@+id/layout_profile"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:layout_marginTop="10dp"
@@ -30,10 +29,11 @@
 
                 <ImageView
                     android:id="@+id/image_back"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
+                    android:layout_width="35dp"
+                    android:layout_height="25dp"
                     android:layout_marginTop="3dp"
-                    android:src="@drawable/ic_backword"/>
+                    android:src="@drawable/ic_back"
+                    app:tint="@color/black" />
 
 
                 <TextView
@@ -44,9 +44,9 @@
                     android:textSize="18sp"
                     android:layout_toEndOf="@id/image_back"
                     android:fontFamily="@font/poppins_bold"
-                    android:textColor="#223263"
+                    android:textColor="#000"
                     android:letterSpacing="0.02"
-                    android:layout_marginLeft="15dp"/>
+                    android:layout_marginStart="15dp"/>
 
 
             </RelativeLayout>
@@ -74,14 +74,15 @@
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Enter Your Gender"
                     android:layout_below="@id/t2"
                     android:layout_marginStart="15dp"
-                    android:layout_marginEnd="30dp">
+                    android:layout_marginEnd="30dp"
+                    android:hint="Enter Your Gender">
+
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/etName"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content" />
                 </com.google.android.material.textfield.TextInputLayout>
 
             </RelativeLayout>
