--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -12,14 +12,15 @@
         android:layout_height="?attr/actionBarSize"
         android:backgroundTint="@color/white"
         android:layout_marginTop="20dp"
+        android:layout_marginStart="10dp"
         android:background="?attr/colorPrimary"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
         <ImageView
-            android:layout_width="30dp"
-            android:layout_height="20dp"
-            android:layout_marginStart="20dp"
+            android:id="@+id/arrow_back"
+            android:layout_width="35dp"
+            android:layout_height="25dp"
             android:layout_marginTop="20dp"
             android:scaleType="fitXY"
             android:src="@drawable/ic_back"/>
@@ -33,8 +34,8 @@
             android:textColor="@color/black"
             android:fontFamily="@font/nunito_sans_bold"
             android:gravity="center_horizontal"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="15dp"/>
 
     </androidx.appcompat.widget.Toolbar>
 
