--- a/app/src/main/res/layout-w936dp/content_scrolling.xml
+++ b/app/src/main/res/layout-w936dp/content_scrolling.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".ui.main.view.activities.TestActivity"
-    tools:showIn="@layout/activity_test">
+    tools:context=".ui.main.view.activities.CartActivity"
+    tools:showIn="@layout/activity_cart">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="840dp"
