--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".ui.main.view.activities.TestActivity">
+    tools:context=".ui.main.view.activities.CartActivity">
 
 
     <com.google.android.material.appbar.AppBarLayout
