--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -212,54 +212,57 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tab_layout"
                 />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:padding="12dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:background="@color/primary"
+                android:weightSum="2"
+                android:orientation="horizontal">
 
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_share_product"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="6dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/border_btn_accent"
+                    android:drawableLeft="@drawable/ic_share_blue_dark"
+                    android:elevation="0dp"
+                    android:fontFamily="@font/poppins_bold"
+                    android:paddingLeft="12dp"
+                    android:paddingRight="12dp"
+                    android:shadowColor="@color/primary"
+                    android:text="@string/share_product"
+                    android:textColor="#1099EE"
+                    android:textSize="12sp" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_add_to_cart"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:textColor="@color/white"
+                    android:layout_margin="6dp"
+                    android:textSize="12sp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/button_background_shape"
+                    android:drawableLeft="@drawable/ic_shopping_cart"
+                    android:fontFamily="@font/poppins_bold"
+                    android:paddingRight="12dp"
+                    android:paddingLeft="12dp"
+                    android:text="Add to cart" />
+
+            </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     </androidx.core.widget.NestedScrollView>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:padding="12dp"
-            android:background="@color/primary"
-            android:weightSum="2"
-            android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@id/recyclerviewsimilarproducts">
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btn_share_product"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="6dp"
-                android:layout_weight="1"
-                android:background="@drawable/border_btn_accent"
-                android:drawableLeft="@drawable/ic_share_blue_dark"
-                android:elevation="0dp"
-                android:fontFamily="@font/poppins_bold"
-                android:paddingLeft="12dp"
-                android:paddingRight="12dp"
-                android:shadowColor="@color/primary"
-                android:text="@string/share_product"
-                android:textColor="#1099EE"
-                android:textSize="12sp" />
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:textColor="@color/white"
-                android:layout_margin="6dp"
-                android:textSize="12sp"
-                android:layout_height="wrap_content"
-                android:background="@drawable/button_background_shape"
-                android:drawableLeft="@drawable/ic_shopping_cart"
-                android:fontFamily="@font/poppins_bold"
-                android:paddingRight="12dp"
-                android:paddingLeft="12dp"
-                android:text="Add to cart" />
-
-        </LinearLayout>
 
         <include layout="@layout/layout_share_item_bottom_sheet" />
 
