--- a/app/src/main/res/layout/fragment_shares.xml
+++ b/app/src/main/res/layout/fragment_shares.xml
@@ -30,6 +30,30 @@ tools:context=".ui.main.view.fragments.SharesFragment">
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Shares"
+                android:textSize="22dp"
+                android:textColor="#223263"
+                android:fontFamily="@font/nunito_sans_extra_bold"
+                android:layout_marginStart="25dp"
+                android:layout_marginTop="15dp"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerViewMyShares"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:clipToPadding="true"
+                android:nestedScrollingEnabled="true" />
+        </LinearLayout>
+
+
 
     </androidx.core.widget.NestedScrollView>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
