--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/FirstFragment"
         android:name="com.example.tendoapp.ui.main.view.activities.FirstFragment"
-        android:label="@string/first_fragment_label"
+        android:label="@string/MyOrders"
         tools:layout="@layout/fragment_first">
 
         <action
@@ -18,7 +18,7 @@
     <fragment
         android:id="@+id/SecondFragment"
         android:name="com.example.tendoapp.ui.main.view.activities.SecondFragment"
-        android:label="@string/second_fragment_label"
+        android:label="@string/confirmOrder"
         tools:layout="@layout/fragment_second">
 
         <action
