--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -2,6 +2,7 @@
 <resources>
     <array name="preloaded_fonts" translatable="false">
         <item>@font/raleway</item>
+        <item>@font/raleway_extrabold</item>
         <item>@font/raleway_semibold</item>
         <item>@font/raleway_thin</item>
     </array>
