--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -49,14 +49,16 @@
         <com.kofigyan.stateprogressbar.StateProgressBar
             android:id="@+id/step_progress"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="11sp"
             app:spb_currentStateNumber="three"
             android:layout_marginTop="20dp"
             android:layout_marginStart="20dp"
             app:spb_maxStateNumber="four"
+            app:spb_stateDescriptionSize="12sp"
             app:spb_stateBackgroundColor="#BDBDBD"
             app:spb_stateForegroundColor="#1099EE"
             app:spb_stateNumberBackgroundColor="#808080"
+            app:spb_descriptionTopSpaceIncrementer="8dp"
             app:spb_stateNumberForegroundColor="#eeeeee"
             app:spb_currentStateDescriptionColor="#1099EE"
             app:spb_stateDescriptionColor="#808080"
