--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -22,13 +22,13 @@
              android:clipToPadding="true"
              android:nestedScrollingEnabled="false" />
          <androidx.appcompat.widget.AppCompatButton
-             android:id="@+id/btnGetStarted"
+             android:id="@+id/btn_create_order"
              android:layout_width="match_parent"
              android:layout_marginStart="24dp"
              android:layout_marginEnd="24dp"
              android:layout_height="wrap_content"
              android:background="@drawable/button_background_shape"
-             android:text="Create Order"
+             android:text="@string/create_order"
              android:visibility="visible"
              android:textColor="@color/white"
              android:fontFamily="@font/poppins_bold"
